Added JUnit test for Location addDonation

--- a/WebApp/BuzzTracker/index.html
+++ b/WebApp/BuzzTracker/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>BuzzTracker</title>
-</head>
-<body>
-    <h1>Hello There</h1>
-</body>
+    <head>
+        <Title>Welcome</Title>
+    </head>
 </html>
+<body>
+    <div class="head container">
+        <div class="welcome banner">
+            <h1>Welcome to BuzzTracker</h1>
+        </div>
+    </div>
+    <div class="container"
+        <div class="body container">
+            <div class="button container" style="display:inline-block;">
+                <button>Login</button>
+                <button>Register</button>
+            </div>
+        </div>
+    </div>
+</body>
