--- a/WebApp/BuzzTracker/appscreen.html
+++ b/WebApp/BuzzTracker/appscreen.html
@@ -2,6 +2,21 @@
 <html>
   <head>
     <title>BuzzTracker</title>
+    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+      apiKey: "AIzaSyCbzZ4-uziDWO_FTlcEWL0vgIZtCorCN4c",
+      authDomain: "buzztracker-ed761.firebaseapp.com",
+      databaseURL: "https://buzztracker-ed761.firebaseio.com",
+      projectId: "buzztracker-ed761",
+      storageBucket: "buzztracker-ed761.appspot.com",
+      messagingSenderId: "506881197326"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <script src="./scripts/appscreen.js"></script>
+
   </head>
   <body>
     <div class="header container" style="display: inline-block;">
@@ -10,7 +25,7 @@
       </div>
     </div>
     <div class="logout button container" style="display: inline-block;">
-        <button class="logout button">Logout</button>
+        <button onclick="return logout();" class="logout button">Logout</button>
     </div>
     <div class="main container">
       <div class="link container">
