registration and login now fully functional on webapp

--- a/WebApp/BuzzTracker/appscreen.html
+++ b/WebApp/BuzzTracker/appscreen.html
@@ -29,9 +29,8 @@
     </div>
     <div class="main container">
       <div class="link container">
-        <ul class="link table">
+        <ul class="link table" id="page_links">
           <!-- Populate this using javascript, based upon user type !-->
-          <li><a href="www.google.com">Fake Link</a></li>
         </ul>
       </div>
     </div>
