--- a/WebApp/BuzzTracker/login.html
+++ b/WebApp/BuzzTracker/login.html
@@ -28,6 +28,7 @@
       </div>
     </div>
     <div class="main container">
+        <p id="error_message" style="color:red;"></p>
       <div class="form container">
         <form method="post" onsubmit="return login();">
           Email:
